src/components/Main.scss
.parent {
  height: 100vh;
  width: 100%;
  background-color: black;
  top: 0;
  overflow-y: hidden;
  overflow-x: hidden;
  position: relative;
}

.logo-color {
  stroke: #0affa7;
  animation: color-change 12s ease infinite;
}

@keyframes color-change {
  15% {
    stroke: aqua;
  }

  30% {
    stroke: blue;
  }

  45% {
    stroke: red;
  }

  60% {
    stroke: orange;
  }

  75% {
    stroke: purple;
  }

  90% {
    stroke: yellow;
  }

  105% {
    stroke: #0affa7;
  }
}

.burger-color {
  fill: darkgray;
}

.burger-color-div:hover > svg > g > .burger-color {
  animation: color-change-2 3s ease infinite;
}

@keyframes color-change-2 {
  25% {
    fill: #0affa7;
  }

  50% {
    fill: yellow;
  }

  75% {
    fill: red;
  }

  100% {
    fill: aqua;
  }
}

.burger-color-div {
  height: 47px;
  width: 60px;
  margin-top: 3.5vh;
  margin-right: 10vh;
  cursor: pointer;
}

.main-container {
  overflow: hidden;
  position: relative;
}

.menu-items {
  color: white;
  user-select: none;
  height: 15vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 60px;
  font-weight: 600;
  cursor: pointer;
  width: 65vw;
  box-shadow: inset 0 0 0 0.09px black;
  transition: box-shadow 1s;
  &:hover {
    box-shadow: inset 65vw 20vh plum;
  }
}

#text-intro::selection {
  background: plum;
}

#burger-animation-first::-webkit-scrollbar {
  display: none;
}

#burger-animation-first {
  overflow-x: hidden;
}

#linkedin-logo {
  cursor: pointer;
  margin-top: 3.5vh;
  transform: translateY(-250%);
}
#linkedin-path {
  fill: lightgray;
  transition: 0.5s ease;
}

#linkedin-logo:hover > #linkedin-path {
  fill: white;
}

#github-logo {
  margin-top: 3.5vh;
  cursor: pointer;
  margin-right: 30px;
  transform: translateY(-250%);
}

#github-path {
  fill: lightgray;
  transition: 0.5s ease;
}

#github-logo:hover > #github-path {
  fill: white;
}

.container-projects-img {
  background-color: black;
  height: 43vh;
  margin-bottom: 10vh;
  aspect-ratio: 18/9;
  z-index: 5;
}

#test {
  background: linear-gradient(
    to left,
    rgb(222, 222, 247),
    white,
    rgb(222, 222, 247),
    white
  );
  background-size: 400% 400%;
  animation: linear-fade1 8s ease infinite;
}

@keyframes linear-fade1 {
  0% {
    background-position: 0 50%;
  }

  50% {
    background-position: 100% 50%;
  }

  100% {
    background-position: 0 50%;
  }
}

#first-project {
  box-shadow: 0 0 20px gray;
  transition: box-shadow 0.5s ease;
  cursor: pointer;
  position: relative;
}

#first-project:hover {
  box-shadow: 0 0 40px gray;
}

.boxshadow-projects {
  box-shadow: 0 0 20px gray;
  transition: box-shadow 0.5s ease;
  cursor: pointer;
}

.boxshadow-projects:hover {
  box-shadow: 0 0 40px gray;
}

#name-bullseye {
  font-size: 44px;
  font-weight: 600;
  transition: font-size 0.5s ease;
}

#name-happy {
  font-size: 44px;
  font-weight: 600;
  transition: font-size 0.5s ease;
  color: white;
  text-decoration: none;
  z-index: 3;
  user-select: none;
}

#name-personal {
  font-size: 44px;
  font-weight: 600;
  transition: font-size 0.5s ease;
}

#first-project:hover > #name-bullseye {
  font-size: 47.5px;
}

#second-project:hover > #name-happy {
  font-size: 47.5px;
}

#third-project:hover > #name-personal {
  font-size: 47.5px;
}

#desc-bullseye {
  font-size: 22px;
  transition: font-size 0.5s ease;
}

#desc-happy {
  font-size: 22px;
  transition: font-size 0.5s ease;
  text-decoration: none;
}

#desc-personal {
  font-size: 22px;
  transition: font-size 0.5s ease;
  text-decoration: none;
}

#first-project:hover > #desc-bullseye {
  font-size: 24px;
}

#second-project:hover > #desc-happy {
  font-size: 24px;
}

#third-project:hover > #desc-personal {
  font-size: 24px;
}

.view-project-button {
  width: 150px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: linear-gradient(to left, #fb9696, #e66465);
  color: white;
  z-index: 3;
  cursor: pointer;
  font-size: 19px;
  transition: all 0.5s ease;
}

.view-project-button2 {
  width: 150px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: linear-gradient(to left, #d4d086, #bfc207);
  color: white;
  z-index: 3;
  cursor: pointer;
  font-size: 19px;
  transition: all 0.5s ease;
}

.view-project-button3 {
  width: 150px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: linear-gradient(to left, #0bb5e4, #09e909);
  color: white;
  z-index: 3;
  cursor: pointer;
  font-size: 19px;
  transition: all 0.5s ease;
}

#first-project:hover > #bullseye-view-but {
  width: 165px;
  height: 45px;
}

#second-project:hover > #bullseye-view-but2 {
  width: 165px;
  height: 45px;
}

#third-project:hover > #personal-view-but {
  width: 165px;
  height: 45px;
}

#number-1 {
  font-size: 170px;
  text-decoration: none;
  z-index: 4;
  color: white;
  font-weight: 600;
  font-family: "League Spartan", Helvetica, Arial, sans-serif;
  transition: transform 0.5s ease 0.25s, opacity 0.5s ease;
  position: relative;
  transform: translateY(15px);
  overflow: hidden;
  opacity: 0;
}

#number-1::before {
  transition: height 0.4s ease 0.4s;
  content: attr(data-text);
  position: absolute;
  overflow: hidden;
  left: 0;
  top: 0;
  color: rgb(148, 144, 144);
  height: 100%;
}

#first-project:hover > #number-1::before {
  height: 0;
}

#first-project:hover > #number-1 {
  opacity: 1;
  transform: translateY(-15px);
}

#number-2 {
  font-size: 170px;
  text-decoration: none;
  z-index: 4;
  color: white;
  font-weight: 600;
  font-family: "League Spartan", Helvetica, Arial, sans-serif;
  transition: transform 0.5s ease 0.25s, opacity 0.5s ease;
  position: relative;
  transform: translateY(15px);
  overflow: hidden;
  opacity: 0;
}

#number-2::before {
  transition: height 0.4s ease 0.4s;
  content: attr(data-text);
  position: absolute;
  overflow: hidden;
  left: 0;
  top: 0;
  color: rgb(148, 144, 144);
  height: 100%;
}

#second-project:hover > #number-2::before {
  height: 0;
}

#second-project:hover > #number-2 {
  opacity: 1;
  transform: translateY(-15px);
}

#number-3 {
  font-size: 170px;
  text-decoration: none;
  z-index: 4;
  color: white;
  font-weight: 600;
  font-family: "League Spartan", Helvetica, Arial, sans-serif;
  transition: transform 0.5s ease 0.25s, opacity 0.5s ease;
  position: relative;
  transform: translateY(15px);
  overflow: hidden;
  opacity: 0;
}

#number-3::before {
  transition: height 0.4s ease 0.4s;
  content: attr(data-text);
  position: absolute;
  overflow: hidden;
  left: 0;
  top: 0;
  color: rgb(148, 144, 144);
  height: 100%;
}

#third-project:hover > #number-3::before {
  height: 0;
}

#third-project:hover > #number-3 {
  opacity: 1;
  transform: translateY(-15px);
}

